lifeguard-derive/tests/ui/compile_error_try_into_model_malformed_map_from.stderr
error: expected string literal
   --> tests/ui/compile_error_try_into_model_malformed_map_from.rs:121:28
    |
121 |     #[lifeguard(map_from = 456)]
    |                            ^^^

error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/ui/compile_error_try_into_model_malformed_map_from.rs:123:2
    |
123 | }
    |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_try_into_model_malformed_map_from.rs`
